Adding Questions CRUD and some fixes
